# libmachineid

./: CHANGELOG.md  CMakeLists.txt  README.md  machineid.c  machineid.h  main.c  sha256.c  sha256.h  test.c
.github/workflows/: build.yml
